Fix: remove virtical scrollbar on right of window

--- a/web/src/main/style/edu/dfci/cccb/mev/web/style/mev.css
+++ b/web/src/main/style/edu/dfci/cccb/mev/web/style/mev.css
@@ -54,7 +54,7 @@ p.lead {
 
 #partition {
 	float: left;
-	height: 100%;
+	height: 90%;
 	margin: 0px;
 	width: 30px;
 
